--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     package-maven:
       build:
-          context: /home/test/
+          context: /home/docker-compose/
           dockerfile: Dockerfile
       volumes:
           - build-maven:/usr/local/tomcat/webapp
