--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,17 @@ services:
       build:
          context: .
          dockerfile: Dockerfile
-      ports:
-        - 8080:8080
       volumes:
         - build-maven:/usr/local/tomcat/webapps
-  
+   start-tomcat:
+      image: tomcat:9.0-alpine
+      ports:
+        - 8080:8080
+      depends_on:
+        - package-maven
+      volumes:
+        - build-maven:/usr/local/tomcat/webapps
+
 volumes:
   build-maven:
 ...
